# SyMPC

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .snyk  AUTHORS.rst  CODEOWNERS  CONTRIBUTING.md  LICENSE.txt  README.md  README.rst  SUPPORTED_OPS.rst  foo.py  requirements.dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py
docs/: Makefile  (+2 more)
src/: Cargo.toml
src/src/: lib.rs
src/sympc/: CustomPickle.py  __init__.py  api.py  test.py  test2.py
src/sympc/algorithms/: __init__.py  algorithms.py  sort.py
src/sympc/applications/: __init__.py  sort.py
src/sympc/approximations/: __init__.py  exponential.py  log.py  reci.py  reciprocal.py  sigmoid.py  softmax.py  tanh.py  test.py  utils.py
src/sympc/config/: __init__.py  config.py
src/sympc/encoder/: __init__.py  fp_encoder.py
src/sympc/grads/: grad_functions.py
src/sympc/module/: __init__.py  linear.py  module.py
src/sympc/optim/: __init__.py  sgd.py
src/sympc/protocol/: __init__.py  protocol.py
src/sympc/rust_test/: __init__.py  rust_test.py
src/sympc/session/: __init__.py  session.py  session_manager.py  session_utils.py  utils.py
src/sympc/store/: __init__.py  crypto_primitive_provider.py  crypto_store.py  crypto_store_provider.py
src/sympc/sympc/: __init__.py  ffi.py
src/sympc/tensor/: __init__.py  additive_shared.py  mpc_tensor.py  register_approximation.py  replicatedshare_tensor.py  share.py  share_control.py  share_tensor.py  static.py  tensor.py  test.py  test2.py  utils.py
src/sympc/utils/: __init__.py  mpc_utils.py  utils.py
(+101 files in other folders)
